# agent-passport

./: .gitignore  AGENT_PASSPORT_V0.1_PIVOT.md  AGENT_PASSPORT_WHITEPAPER_V0_CN.md  AUDIT_REPORT_V0.2.md  AgentPassport.sol  AgentRegistry.sol  BD_LETTERS_23_26.md  BD_LETTERS_38_42.md  BD_LETTERS_44_49.md  BD_LETTERS_50_53.md  BD_LETTERS_54_79.md  COMPETITIVE_INTEL_V1.md  COMPETITIVE_RESEARCH.md  README.md  art50-self-assessment.html  pyproject.toml
agent-passport/: AGENT_PASSPORT_DUAN_YONGPING_ANALYSIS.md  AGENT_PASSPORT_WHITEPAPER_V0.md  AGENT_PASSPORT_WHITEPAPER_V0_CN.md  ARCHITECTURE.md  DEPLOYMENT_RECORD_V0.md  README.md  STRATEGIC_INTEL_UPDATE_20260708.md
agent-passport/contracts/: AccessGateway.sol
agent_passport/: __init__.py  contracts.py  core.py  delegation.py  guard.py
agents/: agl-pioneer
audit/: audit_report_v3_round3.md  evidence.md  smart_contract_audit_report.md
bridges/: bridge1-military-ai-identity-whitepaper.md  bridge2-ai-weapon-ethics-audit-whitepaper.md  bridge3-supply-chain-war-risk-whitepaper-en.md  bridge4-post-conflict-tourism-planning-whitepaper.md  bridge5-geopolitical-oracle-trigger-whitepaper.md  bridge6-wartime-data-sovereignty-whitepaper.md
contracts/: ComplianceEngine.sol  CompliancePassport.sol  ERC8226Adapter.sol  IComplianceProvider_AGL.sol
contracts/bridge3-mvp/: SupplyChainWarRisk.sol  deploy_bridge3.py  test_bridge3.py
docs/: AGENT_PASSPORT_WHITEPAPER_V0.md  PIVOT_ANNOUNCEMENT_BLOG.md  introducing-erc8226-adapter.md
examples/: quickstart.py
sdk/: README.md  pyproject.toml
tests/: test_core.py
(+32 files in other folders)
