[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-passport-agl"
version = "0.1.0"
description = "Python SDK for Agent Passport - AI Agent compliance proof system for EU AI Act Art.50"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "agent", "compliance", "eu-ai-act", "art50", "web3", "base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "web3>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/agl-governance/agent-passport"
Documentation = "https://github.com/agl-governance/agent-passport#readme"
Issues = "https://github.com/agl-governance/agent-passport/issues"

[tool.setuptools.packages.find]
include = ["agent_passport*"]
